tests/errors/typecheck/invalid-interface-input.expect
---CODE---
1
---STDERR---
error: bundle's availability is greater than the delay of the event
  ┌─ tests/errors/typecheck/invalid-interface-input.fil:6:11
  │
2 │   comp Main<'G: 3, 'L: 1>(
  │                        - event's delay
  ·
6 │      in2: ['L, 'L+2] 32,
  │           ^^^^^^^^^^ available for 2 cycles

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
